force-app/main/default/objects/Custom_Approval_History__c/Custom_Approval_History__c.object-meta.xml
<CustomObject>
    <label>Custom Approval History</label>
    <nameField>
        <displayFormat>AH-{0000}</displayFormat>
        <label>Custom Approval History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Approval Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>