force-app/main/default/objects/Custom_Approval_History__c/fields/Loan_To_Value__c.field-meta.xml
<CustomField>
    <fullName>Loan_To_Value__c</fullName>
    <label>Loan To Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>