force-app/main/default/objects/Custom_Approval_History__c/fields/Value_to_Approve__c.field-meta.xml
<CustomField>
    <fullName>Value_to_Approve__c</fullName>
    <label>Value to Approve</label>
    <length>255</length>
    <type>Text</type>
</CustomField>